🚙 Upgrade pagination, terminology with intruiging words, fix intruiging words left-alignment

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -570,83 +570,86 @@
 }
 
 .word_card_container {
-  margin: 0.5em auto;
+  margin: 0 auto;
   padding: 1em 2em;
-  .word_card {
-      display: inline-block;
-      box-shadow: 0 1px 1px rgba(7,7,7, 0.25), 
-                  0 10px 10px rgba(12,12,12, 0.5),
-                  0 1px 6px rgba(0, 0, 0, 0.3);
-      background: hsl(276, 5%, 15%); // linear-gradient(to right, hsl(280, 20%, 9%), hsl(278, 25%, 8%));
-      width: max(80%, 20em);
-      margin: 0 auto;
-      max-width: 40em;
-      border: 1px solid 	#7e7058;
-      position: relative;
-      padding: 1em 2.5em;
-      border-radius: 1em;
-      transition: $cubic-bezier-default;
-      h1 {
-        color: hsl(40, 26%, 68%); // hsl(40, 70%, 85%);
-        font-size: $type-size-2;
-        font-family: $didot-family;
-        border: none;
-        overflow-wrap: break-word;
-        hyphens: auto;
-      }
-      p {
-        color: hsl(40, 26%, 68%); // hsl(40, 70%, 85%);
-        padding-bottom: 1em;
-        font-family: $cmu-serif-family;
-        font-size: $type-size-7;
-        font-weight: 500;
-        font-style: italic;
-      }
-      p .to-emphasise {
-        position: relative;
-        &::after {
-          transition: inherit;
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 0;
-          height: 1px;
-          background-color: hsl(40, 90%, 90%);
-          transition: width $cubic-bezier-default;
-        }
-      }
-      &::before {
-        content: "Word that intrigues QSD";
-        position: absolute;
-        bottom: 0.5em;
-        right: 1em;
-        font-size: $type-size-8;
-        font-weight: bold;
-        font-variant: small-caps;
-        font-family: $sans-serif-narrow;
-        color: hsl(40, 65%, 85%);
-        opacity: 0.75;
-      }
-      &:hover, &:focus-within {
-
-        box-shadow: $box-shadow-fancy;
-        transform: scale(1.05);
-        border: 1px solid #e0d3b8cc;  // hsl(40, 40%, 80%);
-        h1 {
-          color: hsl(40, 70%, 85%);
-        }
-        p .to-emphasise {
-            color: hsl(40, 95%, 90%);
-            position: relative;
-            &::after {
-              width: 100%;
-          }
-        }
-      }
-    }
+  width: max-content;
+  max-width: 90%;
 }
 
+.word_card {
+  display: block;
+  text-align: left;
+  box-shadow: 0 1px 1px rgba(7,7,7, 0.25), 
+              0 10px 10px rgba(12,12,12, 0.5),
+              0 1px 6px rgba(0, 0, 0, 0.3);
+  background: hsl(276, 5%, 15%); // linear-gradient(to right, hsl(280, 20%, 9%), hsl(278, 25%, 8%));
+  width: max(75%, 20em);
+  margin: 0 auto;
+  max-width: 40em;
+  border: 1px solid 	#7e7058;
+  position: relative;
+  padding: 1em 2.5em;
+  border-radius: 1em;
+  transition: $cubic-bezier-default;
+  h1 {
+    color: hsl(40, 26%, 68%); // hsl(40, 70%, 85%);
+    font-size: $type-size-2;
+    font-family: $didot-family;
+    border: none;
+    overflow-wrap: break-word;
+    hyphens: auto;
+  }
+  p {
+    color: hsl(40, 26%, 68%); // hsl(40, 70%, 85%);
+    padding-bottom: 1em;
+    font-family: $cmu-serif-family;
+    font-size: $type-size-7;
+    font-weight: 500;
+    font-style: italic;
+  }
+  p .to-emphasise {
+    position: relative;
+    &::after {
+      transition: inherit;
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0;
+      height: 1px;
+      background-color: hsl(40, 90%, 90%);
+      transition: width $cubic-bezier-default;
+    }
+  }
+  &::before {
+    content: "Word that intrigues QSD";
+    position: absolute;
+    bottom: 0.5em;
+    right: 1em;
+    font-size: $type-size-8;
+    font-weight: bold;
+    font-variant: small-caps;
+    font-family: $sans-serif-narrow;
+    color: hsl(40, 65%, 85%);
+    opacity: 0.75;
+  }
+  &:hover, &:focus-within {
+
+    box-shadow: $box-shadow-fancy;
+    transform: scale(1.05);
+    border: 1px solid #e0d3b8cc;  // hsl(40, 40%, 80%);
+    h1 {
+      color: hsl(40, 70%, 85%);
+    }
+    p .to-emphasise {
+        color: hsl(40, 95%, 90%);
+        position: relative;
+        &::after {
+          width: 100%;
+      }
+    }
+  }
+}
 .floating_tarot_card {
   display: block;
   width: 100%;
