--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -327,7 +327,7 @@ body {
   margin-bottom: 1em;
   color: $text-color;
   font-size: $type-size-7;
-
+  text-align: center;
   p {
     margin: 0 auto;
   }
